--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -8,11 +8,11 @@
     border-radius: var(--radius);
     text-align: left;
     background-color: #000000;
-    color: #ffffff;
+    color: #FFFFFF;
 }
 
 .mainBanner h3 {
-    font-weight: 120;
+    font-weight: 200;
 }
 
 .mainBanner-socialLinks {
@@ -24,6 +24,7 @@
 .mainBanner-socialLinks svg{
     width: 20px;
     cursor: pointer;
+    color: #FFFFFF;
 }
 
 .mainBanner h1 {
