--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -8,28 +8,51 @@
 
 .experience-content {
     display: grid;
-    grid-template-columns: 150px auto;
+    grid-template-columns: auto;
+    column-gap: 10px;
+    row-gap: 50px;
+}
+
+.experience-content div {
+    padding: 0;
+}
+
+.experience-content div div h5 {
+    color: #64748B;
+    font-weight: 200;
 }
 
 .experience-content-experience-tecnologies {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(auto-fit, 100px);
     column-gap: 10px;
+    row-gap: 10px;
     align-items: center;
 }
 
 .experience-content-experience-tecnologies div {
     display: grid;
-    border: 1px solid #000000;
+    border: 1px solid #FFFFFF;
     text-align: center;
     height: 25px;
     border-radius: 20px;
     font-size: 13px;
     justify-content: center;
     align-items: center;
+    row-gap: 10px;
+    padding: 5px 10px;
 }
 
 .experience-content-experience-tecnologies div p{
     padding: 0;
     margin: 0;
+}
+
+.experience-content p {
+    font-weight: 200;
+}
+
+.experience-content h5{
+    line-height: 0px;
 }
