--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   padding: 0;
   font-family: "Outfit", sans-serif;
   height: 100%;
+  background-color: #000000;
+  color: #FFFFFF;
 }
 
 footer {
@@ -23,10 +25,11 @@ footer {
   background-color: #000000;
   color: #ffffff;
   padding: 20px 0 0 0;
-  margin: 50px 0 0 0;
+  margin: 15px 0 15px 0;
   text-align: center;
-  font-weight: 100;
+  font-weight: 200;
   box-shadow: var(--shadow);
+  border-top: 1px solid #FFFFFF;
 }
 
 .brittany {
