--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -13,12 +13,19 @@
     row-gap: 50px;
 }
 
+@media (width >= 640px) {
+    .experience-content-description{
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+}
+
 .experience-content div {
     padding: 0;
 }
 
-.experience-content div div h5 {
-    color: #64748B;
+.experience-content-description div h5 {
+    color: #F9F9F9;
     font-weight: 200;
 }
 
