--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,3 +1,9 @@
+@media (width >= 1015px) {
+    .about h4 {
+        display: none;
+    }
+}
+
 .about {
     margin-top: 40px;
     text-align: left;
