--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -5,13 +5,17 @@
         position: sticky;
         top: 110px;
     }
+
+    .mainBanner h1 {
+        white-space: nowrap;
+    }
     
 }
 
 
 .mainBanner {
     display: grid;
-    grid-template-rows: 70px 70px;
+    grid-template-rows: auto 70px;
     margin: var(--margin);
     padding: var(--padding);
     border: var(--border-size) solid #000000;
@@ -22,14 +26,11 @@
     color: #FFFFFF;
 }
 
-.mainBanner h3 {
-    font-weight: 200;
-}
-
 .mainBanner-socialLinks {
     width: 115px;
     display: grid;
     grid-template-columns: auto auto auto;
+    margin-top: 20px;
 }
 
 .mainBanner-socialLinks svg{
@@ -46,3 +47,11 @@
     font-size: 50px;
 }
 
+.mainBanner h3 {
+    font-weight: 200;
+}
+
+.mainBanner h1, .mainBanner h3 {
+    padding: 0;
+    margin: 0;
+}
