--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,17 @@
   --radius: 10px;
 }
 
+@media (width >= 1015px) {
+  footer {
+    justify-content: right;
+    text-align: left;
+  }
+  footer div {
+    text-align: end;
+    padding-right: 60px;
+  }
+}
+
 body {
   display: grid;
   margin: 0;
@@ -29,7 +40,7 @@ footer {
   text-align: center;
   font-weight: 200;
   box-shadow: var(--shadow);
-  border-top: 1px solid #FFFFFF;
+  
 }
 
 .brittany {
