--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -89,3 +89,10 @@
 .experience-content-details-title-svg:hover {
     cursor: pointer;
 }
+
+
+
+.experience-content-sticky-title {
+    position: sticky;
+    top: 0;
+}
